[gd_scene load_steps=18 format=3 uid="uid://cwkmy8ld3hsc2"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_fwb47"]
[ext_resource type="Texture2D" uid="uid://cltm4mawnfgm1" path="res://Assets/Sprites/preview.png" id="1_p1euf"]
[ext_resource type="PackedScene" uid="uid://y831fiwcav0r" path="res://Scenes/credits.tscn" id="2_nndcs"]
[ext_resource type="Texture2D" uid="uid://comtrm3l4gg0s" path="res://Assets/Sprites/players green x1.png" id="2_sjaf4"]
[ext_resource type="Texture2D" uid="uid://bfp7525ngeh5g" path="res://Assets/Sprites/enemies x1.png" id="3_o6332"]
[ext_resource type="AudioStream" uid="uid://6gwx67gmxtp5" path="res://Music/Rapture (Synthwave).wav" id="4_jbaqf"]

[sub_resource type="LabelSettings" id="LabelSettings_33sfo"]
font_size = 96
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n0e4"]
atlas = ExtResource("2_sjaf4")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh1fn"]
atlas = ExtResource("2_sjaf4")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1acos"]
atlas = ExtResource("2_sjaf4")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2ata"]
atlas = ExtResource("2_sjaf4")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6qm5t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh1fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1acos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2ata")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_n6265"]
atlas = ExtResource("3_o6332")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqvdk"]
atlas = ExtResource("3_o6332")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahnbj"]
atlas = ExtResource("3_o6332")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3kwh"]
atlas = ExtResource("3_o6332")
region = Rect2(96, 256, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_t8clc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6265")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqvdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahnbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3kwh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fwb47")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_p1euf")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -487.0
offset_top = -312.0
offset_right = 487.0
offset_bottom = -194.0
grow_horizontal = 2
grow_vertical = 2
text = "AI Overcharged"
label_settings = SubResource("LabelSettings_33sfo")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -28.0
offset_right = 104.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "PLAY"

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = 84.0
offset_right = 124.5
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 52
text = "Credits"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = 204.0
offset_right = 70.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(231, 434)
scale = Vector2(7.90625, 7.90625)
sprite_frames = SubResource("SpriteFrames_6qm5t")
autoplay = "default"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(1030, 454)
scale = Vector2(6.6875, 6.6875)
sprite_frames = SubResource("SpriteFrames_t8clc")
autoplay = "default"
flip_h = true

[node name="Credits" parent="." instance=ExtResource("2_nndcs")]
visible = false
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jbaqf")
volume_db = -6.0
autoplay = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
